docs: update memory bank context